// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelinePage should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        App Pipeline
      </h1>
      <div
        class="el-tabs-full-width el-tabs-wrap"
      >
        <div
          class="mocked-styled-120 el-tabs-options-wrap"
          role="tablist"
        >
          <input
            aria-selected="true"
            checked=""
            class="mocked-styled-117 el-tabs"
            id="deployments"
            name="pipeline-tabs"
            type="radio"
            value="deployments"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="deployments"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Deployments
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="configure"
            name="pipeline-tabs"
            type="radio"
            value="configure"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="configure"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Configure
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="environment"
            name="pipeline-tabs"
            type="radio"
            value="environment"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="environment"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Environment Variables
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="DNS"
            name="pipeline-tabs"
            type="radio"
            value="DNS"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="DNS"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Custom DNS
            </span>
          </label>
        </div>
        <div
          class="el-tabs-full-width el-tabs-footer"
        />
      </div>
      <div
        class="el-mb11 el-grid"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-flex-container el-flex-align-center"
          >
            <div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Status
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                <span
                  class="el-intent-danger el-status-indicator"
                />
                 
                Failed
              </p>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-flex-container el-flex-align-center"
          >
            <div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Repository
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                <span
                  class="el-intent-success el-status-indicator"
                />
                 
                <a
                  href="https://github.com/bashleigh/reapit-react-test"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://github.com/bashleigh/reapit-react-test
                </a>
              </p>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-flex-container el-flex-align-center"
          >
            <div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Location
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                <a
                  href="https://beautiful-land.dev.iaas.paas.reapit.cloud"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://beautiful-land.dev.iaas.paas.reapit.cloud
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r0:"
      >
        <button
          aria-controls=":r0:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      App Pipeline
    </h1>
    <div
      class="el-tabs-full-width el-tabs-wrap"
    >
      <div
        class="mocked-styled-120 el-tabs-options-wrap"
        role="tablist"
      >
        <input
          aria-selected="true"
          checked=""
          class="mocked-styled-117 el-tabs"
          id="deployments"
          name="pipeline-tabs"
          type="radio"
          value="deployments"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="deployments"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Deployments
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="configure"
          name="pipeline-tabs"
          type="radio"
          value="configure"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="configure"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Configure
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="environment"
          name="pipeline-tabs"
          type="radio"
          value="environment"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="environment"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Environment Variables
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="DNS"
          name="pipeline-tabs"
          type="radio"
          value="DNS"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="DNS"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Custom DNS
          </span>
        </label>
      </div>
      <div
        class="el-tabs-full-width el-tabs-footer"
      />
    </div>
    <div
      class="el-mb11 el-grid"
    >
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-flex-container el-flex-align-center"
        >
          <div>
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Status
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              <span
                class="el-intent-danger el-status-indicator"
              />
               
              Failed
            </p>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-flex-container el-flex-align-center"
        >
          <div>
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Repository
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              <span
                class="el-intent-success el-status-indicator"
              />
               
              <a
                href="https://github.com/bashleigh/reapit-react-test"
                rel="noreferrer"
                target="_blank"
              >
                https://github.com/bashleigh/reapit-react-test
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-flex-container el-flex-align-center"
        >
          <div>
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Location
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              <a
                href="https://beautiful-land.dev.iaas.paas.reapit.cloud"
                rel="noreferrer"
                target="_blank"
              >
                https://beautiful-land.dev.iaas.paas.reapit.cloud
              </a>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-44 el-loader-container"
    >
      <div
        class="mocked-styled-46 el-loader"
      >
        <div
          class="mocked-styled-47 el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r0:"
    >
      <button
        aria-controls=":r0:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelinePage should match snapshot for mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        App Pipeline
      </h1>
      <div
        class="el-tabs-full-width el-tabs-wrap"
      >
        <div
          class="mocked-styled-120 el-tabs-options-wrap"
          role="tablist"
        >
          <input
            aria-selected="true"
            checked=""
            class="mocked-styled-117 el-tabs"
            id="deployments"
            name="pipeline-tabs"
            type="radio"
            value="deployments"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="deployments"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Deployments
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="configure"
            name="pipeline-tabs"
            type="radio"
            value="configure"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="configure"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Configure
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="environment"
            name="pipeline-tabs"
            type="radio"
            value="environment"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="environment"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Environment Variables
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="DNS"
            name="pipeline-tabs"
            type="radio"
            value="DNS"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="DNS"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Custom DNS
            </span>
          </label>
        </div>
        <div
          class="el-tabs-full-width el-tabs-footer"
        />
      </div>
      <div
        class="el-mb11 el-grid"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-flex-container el-flex-align-center"
          >
            <div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Status
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                <span
                  class="el-intent-danger el-status-indicator"
                />
                 
                Failed
              </p>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-flex-container el-flex-align-center"
          >
            <div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Repository
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                <span
                  class="el-intent-success el-status-indicator"
                />
                 
                <a
                  href="https://github.com/bashleigh/reapit-react-test"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://github.com/bashleigh/reapit-react-test
                </a>
              </p>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-flex-container el-flex-align-center"
          >
            <div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Location
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                <a
                  href="https://beautiful-land.dev.iaas.paas.reapit.cloud"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://beautiful-land.dev.iaas.paas.reapit.cloud
                </a>
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r5:"
      >
        <button
          aria-controls=":r5:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      App Pipeline
    </h1>
    <div
      class="el-tabs-full-width el-tabs-wrap"
    >
      <div
        class="mocked-styled-120 el-tabs-options-wrap"
        role="tablist"
      >
        <input
          aria-selected="true"
          checked=""
          class="mocked-styled-117 el-tabs"
          id="deployments"
          name="pipeline-tabs"
          type="radio"
          value="deployments"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="deployments"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Deployments
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="configure"
          name="pipeline-tabs"
          type="radio"
          value="configure"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="configure"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Configure
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="environment"
          name="pipeline-tabs"
          type="radio"
          value="environment"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="environment"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Environment Variables
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="DNS"
          name="pipeline-tabs"
          type="radio"
          value="DNS"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="DNS"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Custom DNS
          </span>
        </label>
      </div>
      <div
        class="el-tabs-full-width el-tabs-footer"
      />
    </div>
    <div
      class="el-mb11 el-grid"
    >
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-flex-container el-flex-align-center"
        >
          <div>
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Status
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              <span
                class="el-intent-danger el-status-indicator"
              />
               
              Failed
            </p>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-flex-container el-flex-align-center"
        >
          <div>
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Repository
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              <span
                class="el-intent-success el-status-indicator"
              />
               
              <a
                href="https://github.com/bashleigh/reapit-react-test"
                rel="noreferrer"
                target="_blank"
              >
                https://github.com/bashleigh/reapit-react-test
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-flex-container el-flex-align-center"
        >
          <div>
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Location
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              <a
                href="https://beautiful-land.dev.iaas.paas.reapit.cloud"
                rel="noreferrer"
                target="_blank"
              >
                https://beautiful-land.dev.iaas.paas.reapit.cloud
              </a>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-44 el-loader-container"
    >
      <div
        class="mocked-styled-46 el-loader"
      >
        <div
          class="mocked-styled-47 el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r5:"
    >
      <button
        aria-controls=":r5:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelinePage should match snapshot where loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        App Pipeline
      </h1>
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r1:"
      >
        <button
          aria-controls=":r1:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      App Pipeline
    </h1>
    <div
      class="mocked-styled-44 el-loader-container"
    >
      <div
        class="mocked-styled-46 el-loader"
      >
        <div
          class="mocked-styled-47 el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r1:"
    >
      <button
        aria-controls=":r1:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelinePage should match snapshot where no pipeline 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        App Pipeline
      </h1>
      <div
        class="mocked-styled-30 el-grid"
      >
        <div
          class="mocked-styled-34 el-col-split"
        >
          <mock-styled.div
            classname="el-mb10"
          >
            <svg
              class=""
              id="eYmCOrjogMB1"
              shape-rendering="geometricPrecision"
              text-rendering="geometricPrecision"
              viewBox="0 0 141 140"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <g
                id="eYmCOrjogMB2"
              >
                <path
                  d="M69,130C98.2711,130,122,106.271,122,77C122,47.7289,98.2711,24,69,24C39.7289,24,16,47.7289,16,77C16,106.271,39.7289,130,69,130Z"
                  fill="#506478"
                  id="eYmCOrjogMB3"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M118.382,96.2874L19.2617,58.6543C26.7257,38.4247,46.1787,24,69.0007,24C98.2718,24,122.001,47.7289,122.001,77C122.001,83.8048,120.718,90.3102,118.382,96.2874Z"
                  fill="#9faebc"
                  id="eYmCOrjogMB4"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M47.7578,28.4284C54.261,25.5803,61.4458,24,68.9997,24C98.2708,24,122,47.7289,122,77C122,98.7471,108.902,117.435,90.1642,125.605L47.7578,28.4284Z"
                  fill="#798da1"
                  id="eYmCOrjogMB5"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M47.7578,28.4284C54.261,25.5803,61.4458,24,68.9997,24C98.2708,24,122,47.7289,122,77C122,83.8162,120.713,90.3318,118.369,96.3172L69.3665,77.946L47.7578,28.4284Z"
                  fill="#798da1"
                  id="eYmCOrjogMB6"
                  stroke="none"
                  stroke-width="1"
                />
              </g>
              <g
                id="webhooks-new-svg-element-one"
                transform="translate(69,24) scale(1,1)"
              >
                <g
                  id="eYmCOrjogMB7"
                  transform="translate(-69,-24)"
                >
                  <circle
                    fill="#fff"
                    id="eYmCOrjogMB8"
                    r="24"
                    stroke="none"
                    stroke-width="1"
                    transform="matrix(1 0 0 1 69 24)"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M60.7574,16.9685C60.7574,12.6704,64.2729,9.15686,68.5734,9.15686C72.8738,9.15686,76.3893,12.6704,76.3893,16.9685C76.3893,21.2666,72.8738,24.7802,68.5734,24.7802C64.2729,24.7802,60.7574,21.2666,60.7574,16.9685ZM81.202,29.5899C81.5092,30.0334,81.7822,30.511,81.987,31.0227C82.0894,31.2273,82.0553,31.4661,81.8847,31.6708C81.6117,32.1484,81.3045,32.5918,80.9632,33.0353C80.4853,33.6834,79.9393,34.2633,79.3932,34.8091C78.9153,35.2866,78.3692,35.7643,77.8231,36.1736C75.1269,38.1862,71.8844,39.2436,68.5396,39.2436C65.1948,39.2436,61.9524,38.1862,59.2561,36.1736C58.71,35.7301,58.1639,35.2866,57.6861,34.8091C57.1059,34.2633,56.5939,33.6835,56.1161,33.0353C55.8089,32.626,55.4676,32.1484,55.1946,31.6708C55.0922,31.4661,55.0581,31.2274,55.1605,31.0227C55.3652,30.5451,55.6383,30.0334,55.9454,29.5899C57.4813,27.2703,59.9387,25.7353,62.6691,25.36C63.0104,25.2918,63.3858,25.3941,63.6589,25.5988C65.0924,26.6563,66.7989,27.2021,68.5737,27.2021C70.3486,27.2021,72.0551,26.6563,73.4886,25.5988C73.7616,25.3941,74.1371,25.326,74.4783,25.36C77.2088,25.7353,79.632,27.2703,81.202,29.5899Z"
                    fill="#7e9bfa"
                    fill-rule="evenodd"
                    id="eYmCOrjogMB9"
                    stroke="none"
                    stroke-width="1"
                  />
                </g>
              </g>
              <g
                id="webhooks-new-svg-element-two"
                transform="translate(24,107) scale(1,1)"
              >
                <g
                  id="eYmCOrjogMB10"
                  transform="translate(-24,-107)"
                >
                  <circle
                    fill="#fff"
                    id="eYmCOrjogMB11"
                    r="24"
                    stroke="none"
                    stroke-width="1"
                    transform="matrix(1 0 0 1 24 107)"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M16.3984,99.5424C16.3984,95.2442,19.9139,91.7307,24.2143,91.7307C28.5148,91.7307,32.0303,95.2442,32.0303,99.5424C32.0303,103.841,28.5148,107.354,24.2143,107.354C19.9139,107.354,16.3984,103.841,16.3984,99.5424ZM36.8392,112.164C37.1464,112.607,37.4194,113.085,37.6242,113.597C37.7266,113.801,37.6925,114.04,37.5219,114.245C37.2489,114.722,36.9417,115.166,36.6004,115.609C36.1225,116.257,35.5764,116.837,35.0304,117.383C34.5525,117.861,34.0064,118.338,33.4603,118.747C30.7641,120.76,27.5216,121.817,24.1768,121.817C20.832,121.817,17.5896,120.76,14.8933,118.747C14.3472,118.304,13.8011,117.861,13.3233,117.383C12.7431,116.837,12.2311,116.257,11.7533,115.609C11.4461,115.2,11.1048,114.722,10.8318,114.245C10.7294,114.04,10.6953,113.801,10.7977,113.597C11.0024,113.119,11.2755,112.607,11.5826,112.164C13.1185,109.844,15.5759,108.309,18.3063,107.934C18.6476,107.866,19.023,107.968,19.2961,108.173C20.7296,109.23,22.4361,109.776,24.2109,109.776C25.9858,109.776,27.6923,109.23,29.1258,108.173C29.3988,107.968,29.7743,107.9,30.1155,107.934C32.846,108.309,35.2692,109.844,36.8392,112.164Z"
                    fill="#7e9bfa"
                    fill-rule="evenodd"
                    id="eYmCOrjogMB12"
                    stroke="none"
                    stroke-width="1"
                  />
                </g>
              </g>
              <g
                id="webhooks-new-svg-element-three"
                transform="translate(117,106) scale(1,1)"
              >
                <g
                  id="eYmCOrjogMB13"
                  transform="translate(-117,-106)"
                >
                  <circle
                    fill="#fff"
                    id="eYmCOrjogMB14"
                    r="24"
                    stroke="none"
                    stroke-width="1"
                    transform="matrix(1 0 0 1 117 106)"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M107.975,98.5499C107.975,94.2518,111.49,90.7383,115.791,90.7383C120.091,90.7383,123.607,94.2518,123.607,98.5499C123.607,102.848,120.091,106.362,115.791,106.362C111.49,106.362,107.975,102.848,107.975,98.5499ZM128.419,111.171C128.727,111.615,129,112.092,129.204,112.604C129.307,112.809,129.273,113.048,129.102,113.252C128.829,113.73,128.522,114.173,128.181,114.617C127.703,115.265,127.157,115.845,126.611,116.391C126.133,116.868,125.587,117.346,125.041,117.755C122.344,119.768,119.102,120.825,115.757,120.825C112.412,120.825,109.17,119.768,106.474,117.755C105.927,117.312,105.381,116.868,104.904,116.391C104.323,115.845,103.811,115.265,103.333,114.617C103.026,114.207,102.685,113.73,102.412,113.252C102.31,113.048,102.275,112.809,102.378,112.604C102.583,112.127,102.856,111.615,103.163,111.171C104.699,108.852,107.156,107.317,109.887,106.941C110.228,106.873,110.603,106.976,110.876,107.18C112.31,108.238,114.016,108.783,115.791,108.783C117.566,108.783,119.272,108.238,120.706,107.18C120.979,106.976,121.354,106.907,121.696,106.941C124.426,107.317,126.849,108.852,128.419,111.171Z"
                    fill="#7e9bfa"
                    fill-rule="evenodd"
                    id="eYmCOrjogMB15"
                    stroke="none"
                    stroke-width="1"
                    transform="matrix(1 0 0 1 1 1)"
                  />
                </g>
              </g>
              <g
                id="webhooks-new-svg-element-four"
                transform="translate(69.3825,75.303001) scale(1,1)"
              >
                <path
                  clip-rule="evenodd"
                  d="M69.0599,82.8133L69.0509,82.8097C68.1124,83.1967,64.7244,83.1896,62.2644,83.1844C61.2546,83.1822,60.4012,83.1804,59.9377,83.2063C55.5647,83.251,51.9503,79.7116,51.9056,75.341C51.9056,70.97,55.4837,67.3572,59.8568,67.3125L66.5311,67.2444C66.5761,67.2439,66.5946,67.3022,66.5572,67.3273C65.2163,68.2248,63.8624,69.77,63.1367,71.1968C63.0708,71.3263,62.9394,71.4089,62.7942,71.411L59.5887,71.4558C57.494,71.4772,55.7977,73.2075,55.8191,75.301C55.8405,77.3945,57.5718,79.0899,59.6664,79.0685C60.1792,79.063,61.0287,79.0546,61.9174,79.0457C63.0521,79.0344,64.2508,79.0224,64.8944,79.0152L64.8944,79.0145C65.0592,79.0121,65.2273,79.0109,65.3974,79.0098C66.7884,79.0005,68.3109,78.9904,69.246,78.2711L69.2463,78.2714C70.0763,77.701,70.528,76.8496,70.6684,76.3033L70.6677,76.3032C70.8934,75.5567,70.8706,74.8017,70.6898,74.121C70.6416,73.9394,70.7414,73.7524,70.9191,73.6913C72.0511,73.3022,73.2099,73.2688,74.2497,73.3788C74.4151,73.3963,74.5786,73.5446,74.6107,73.7077C74.9838,75.6035,74.582,77.6755,73.6403,79.2254L73.6412,79.2277L73.6442,79.2276C72.5658,80.9466,70.9957,82.2465,69.0599,82.8133ZM64.1517,76.9509C63.2099,72.2891,66.8776,67.5559,71.8566,67.4712C71.8619,67.4711,71.8673,67.4709,71.8726,67.4707C71.8765,67.4705,71.8804,67.4704,71.8844,67.4703L78.8274,67.3994C83.2449,67.3543,86.8594,70.9301,86.8594,75.3455C86.8594,79.6721,83.3176,83.2482,78.9889,83.2924L72.2126,83.3616C72.1673,83.3621,72.1491,83.3029,72.1873,83.2783C73.5511,82.4012,74.9453,80.8294,75.6346,79.4153C75.6994,79.2824,75.8324,79.1967,75.9803,79.1946L79.1763,79.15C81.271,79.1286,82.9673,77.3983,82.9459,75.3047C82.9459,73.211,81.232,71.5155,79.1372,71.5369L73.8809,71.5905L73.8837,71.5964C73.6489,71.602,73.4066,71.6034,73.1612,71.6048C71.9192,71.6119,70.5952,71.6195,69.7423,72.1802C68.929,72.6894,68.3867,73.4272,68.1023,74.285C67.883,74.9829,67.8742,75.8422,68.0701,76.5011C68.1215,76.674,68.0221,76.8565,67.8465,76.8982C66.6991,77.1713,65.6413,77.2305,64.4746,77.217C64.3178,77.2152,64.1827,77.1046,64.1517,76.9509Z"
                  fill="#fff"
                  fill-rule="evenodd"
                  id="eYmCOrjogMB16"
                  stroke="none"
                  stroke-width="1"
                  transform="translate(-69.3825,-75.303001)"
                />
              </g>
            </svg>
          </mock-styled.div>
          <h2
            class="el-text-base el-subtitle"
          >
            Pipeline Deployments
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Pipelines are configurations used to deploy applications to our infrastructure. Think of them like a CI / CD runner like Github Actions, Travis or CircleCI
          </p>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            A Pipeline can be created via the developer portal or via our CLI NPM package.
          </p>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            When you have created a pipeline for your app, you can either deploy it from the command line from a zip file, or by pulling directly from a Github or Bitbucket repo. This will give you a link to your deployed service in the Reapit Platform Cloud.
          </p>
          <button
            class="el-intent-primary el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Create Pipeline
          </button>
        </div>
        <div
          class="mocked-styled-34 el-col-split"
        >
          <mock-styled.div
            classname="el-mb10"
          >
            <svg
              class=""
              id="exzbnYXRMC51"
              shape-rendering="geometricPrecision"
              text-rendering="geometricPrecision"
              viewBox="0 0 140 140"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <g
                clip-path="url(#exzbnYXRMC526)"
                id="exzbnYXRMC52"
              >
                <g
                  id="exzbnYXRMC53"
                >
                  <g
                    id="webhooks-docs-svg-element-one"
                    transform="translate(69.99835,61.58215)"
                  >
                    <path
                      d="M119.024,61.4515L69.9983,44.21L20.9727,61.4515L69.9983,78.9543L119.024,61.4515Z"
                      fill="#9faebc"
                      id="exzbnYXRMC54"
                      stroke="none"
                      stroke-width="1"
                      transform="translate(-69.99835,-61.58215)"
                    />
                  </g>
                  <g
                    id="webhooks-docs-svg-element-two"
                    transform="translate(94.509052,61.58215)"
                  >
                    <path
                      d="M119.022,61.4515L69.9961,44.21L69.9961,78.9543L119.022,61.4515Z"
                      fill="#798da1"
                      id="exzbnYXRMC55"
                      stroke="none"
                      stroke-width="1"
                      transform="translate(-94.509052,-61.58215)"
                    />
                  </g>
                  <g
                    id="exzbnYXRMC56"
                    transform="matrix(1 0 0 1 0.000001 0)"
                  >
                    <g
                      id="exzbnYXRMC57"
                      transform="matrix(1 0 0 1 0.000001 0)"
                    >
                      <path
                        d="M88.5528,8.83691L50.3176,8.83691C46.6078,8.83691,43.5898,11.9163,43.5898,15.7005L43.5898,97.8934C43.5898,101.678,46.6078,104.757,50.3176,104.757L88.5528,104.757C92.2626,104.757,95.2814,101.678,95.2814,97.8934L95.2814,15.7005C95.2814,11.9163,92.2626,8.83691,88.5528,8.83691L88.5528,8.83691Z"
                        fill="#607890"
                        id="exzbnYXRMC58"
                        stroke="none"
                        stroke-width="1"
                      />
                      <path
                        d="M88.529,12.8105L82.8467,12.8105C82.3106,12.8105,81.8764,13.2534,81.8764,13.7994C81.8764,15.1111,80.8249,16.1837,79.5399,16.1837L59.2847,16.1837C57.9988,16.1837,56.9473,15.1111,56.9473,13.7994C56.9473,13.2534,56.5132,12.8105,55.977,12.8105L50.2947,12.8105C48.7295,12.8105,47.4609,14.1046,47.4609,15.7003L47.4609,80.5489L91.3628,80.5489L91.3628,15.7003C91.3628,14.1046,90.0942,12.8105,88.529,12.8105Z"
                        fill="#fff"
                        id="exzbnYXRMC59"
                        stroke="none"
                        stroke-width="1"
                      />
                    </g>
                    <g
                      id="exzbnYXRMC510"
                      transform="matrix(1 0 0 1 0 0.000001)"
                    >
                      <path
                        d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,70.5692L50.8828,70.5692L50.8828,45.4146Z"
                        fill="#607890"
                        id="exzbnYXRMC511"
                        stroke="none"
                        stroke-width="1"
                      />
                      <path
                        d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,59.7267L50.8828,45.4146Z"
                        fill="#9faebc"
                        id="exzbnYXRMC512"
                        stroke="none"
                        stroke-width="1"
                      />
                      <path
                        d="M88.036,70.5692L77.1623,70.5692L61.7578,34.7519L69.46,27.1992L88.036,45.4146L88.036,70.5692Z"
                        fill="#798da1"
                        id="exzbnYXRMC513"
                        stroke="none"
                        stroke-width="1"
                      />
                      <path
                        d="M88.036,45.4146L88.036,59.7267L69.46,52.6606L61.7578,34.7519L69.46,27.1992L88.036,45.4146Z"
                        fill="#9faebc"
                        id="exzbnYXRMC514"
                        stroke="none"
                        stroke-width="1"
                      />
                    </g>
                  </g>
                  <g
                    id="webhooks-docs-svg-element-three"
                    transform="translate(69.649327,82.061558)"
                  >
                    <g
                      id="exzbnYXRMC515"
                      transform="translate(-69.649326,-79.061558)"
                    >
                      <path
                        d="M70.011522,75.96449C69.821404,76.74574,69.94991,79.38574,70.011522,81.24449L73.915483,77.719668L70.011522,75.96449Z"
                        fill="#607890"
                        id="exzbnYXRMC516"
                        stroke="none"
                        stroke-width="0.28"
                        transform="matrix(1 0 0 1 0.000001 0.000003)"
                      />
                      <path
                        d="M69.992961,76.053166L69.975852,81.339889L73.932592,77.719668L69.992961,76.053166Z"
                        fill="#506478"
                        id="exzbnYXRMC517"
                        stroke="none"
                        stroke-width="0.28"
                        transform="matrix(-1.168966 0 0 -1.168966 151.807857 171.062202)"
                      />
                    </g>
                  </g>
                  <path
                    d="M69.9983,79.0023L20.9727,61.4512L20.9727,124.568L69.9983,140.345L69.9983,79.0023Z"
                    fill="#506478"
                    id="exzbnYXRMC518"
                    stroke="none"
                    stroke-width="1"
                  />
                  <path
                    d="M119.022,124.568L119.022,61.4512L69.9961,79.0023L69.9961,140.345L119.022,124.568Z"
                    fill="#607890"
                    id="exzbnYXRMC519"
                    stroke="none"
                    stroke-width="1"
                  />
                  <g
                    id="webhooks-docs-svg-element-four"
                    transform="translate(36.9986,80.849051)"
                  >
                    <path
                      d="M20.9715,61.4521L4,81.8288L53.9483,100.246L69.9972,78.955L20.9715,61.4521Z"
                      fill="#9faebc"
                      id="exzbnYXRMC520"
                      stroke="none"
                      stroke-width="1"
                      transform="translate(-36.9986,-80.849051)"
                    />
                  </g>
                  <g
                    id="webhooks-docs-svg-element-five"
                    transform="translate(102.997547,80.848101)"
                  >
                    <path
                      d="M119.022,61.4512L135.999,81.8278L86.0506,100.245L69.9961,78.954L119.022,61.4512Z"
                      fill="#9faebc"
                      id="exzbnYXRMC521"
                      stroke="none"
                      stroke-width="1"
                      transform="translate(-102.997547,-80.848101)"
                    />
                  </g>
                  <g
                    id="webhooks-docs-svg-element-six"
                    transform="translate(89.264528,45.746041)"
                  >
                    <g
                      id="webhooks-docs-svg-element-seven"
                      transform="rotate(-67.423922)"
                    >
                      <g
                        id="webhooks-docs-svg-element-eight"
                        transform="skewX(-1.018603) skewY(0) scale(1,0.999842)"
                      >
                        <rect
                          fill="rgb(255,229,199)"
                          height="12.724"
                          id="exzbnYXRMC522"
                          rx="3"
                          ry="3"
                          stroke="none"
                          stroke-width="1"
                          transform="translate(-6.34105,-6.362)"
                          width="12.6821"
                        />
                      </g>
                    </g>
                  </g>
                  <g
                    id="webhooks-docs-svg-element-nine"
                    style="offset-path: path("M37.255498,23.852076L39.921657,34.649638"); offset-rotate: auto;"
                  >
                    <g
                      id="webhooks-docs-svg-element-ten"
                      transform="rotate(-25.945515)"
                    >
                      <g
                        id="webhooks-docs-svg-element-eleven"
                        transform="skewX(0.740377) skewY(0) scale(0.999999,0.999917)"
                      >
                        <rect
                          fill="#7e9bfa"
                          height="25.3778"
                          id="exzbnYXRMC523"
                          rx="5"
                          ry="5"
                          stroke="none"
                          stroke-width="1"
                          transform="translate(-12.60465,-12.6889)"
                          width="25.2093"
                        />
                      </g>
                    </g>
                  </g>
                  <g
                    id="webhooks-docs-svg-element-twelve"
                    style="offset-path: path("M103.180305,18.127591L98.950013,25.52561"); offset-rotate: auto;"
                  >
                    <g
                      id="webhooks-docs-svg-element-thirteen"
                      transform="rotate(18.101295)"
                    >
                      <g
                        id="webhooks-docs-svg-element-fourteen"
                        transform="skewX(0.486255) skewY(0) scale(1,0.999964)"
                      >
                        <rect
                          fill="rgb(255,229,199)"
                          height="9.95171"
                          id="exzbnYXRMC524"
                          rx="2"
                          ry="2"
                          stroke="none"
                          stroke-width="1"
                          transform="translate(-4.91747,-4.975855)"
                          width="9.83494"
                        />
                      </g>
                    </g>
                  </g>
                  <g
                    id="webhooks-docs-svg-element-fifteen"
                    transform="translate(45.246065,111.063275) scale(1,1)"
                  >
                    <path
                      d="M49.1786,105.193L54.9201,106.917C58.5733,108.013,60.6997,111.91,59.6454,115.577C58.6123,119.17,54.8382,121.23,51.2585,120.155L45.6548,118.473C45.6173,118.462,45.6165,118.408,45.6538,118.398C46.9878,118.019,48.5126,117.072,49.4186,116.075C49.5037,115.981,49.6339,115.944,49.7564,115.98L52.4022,116.764C54.1343,117.284,55.9461,116.282,56.4284,114.538C56.9283,112.8,55.92,110.952,54.1877,110.432L49.8409,109.127C49.8413,109.129,49.8416,109.131,49.8419,109.133C48.6606,108.796,47.2904,108.259,46.2878,108.554C45.4956,108.768,44.8724,109.242,44.4331,109.881C44.0856,110.404,43.8731,111.116,43.8773,111.713C43.8784,111.87,43.7529,111.996,43.5982,111.985C42.5869,111.917,41.7006,111.695,40.7418,111.384C40.6129,111.343,40.528,111.216,40.5391,111.081C40.8757,106.968,45.03,103.979,49.1555,105.187C49.1632,105.189,49.1708,105.191,49.1786,105.193ZM43.17925,117.20304C41.95735,117.31656,36.90484,115.52796,35.5704,115.193C31.9542,114.107,29.8191,110.24,30.8259,106.6C31.8695,102.97,35.6823,100.889,39.2988,101.974L44.8181,103.631C44.8553,103.642,44.8567,103.695,44.8199,103.706C43.4999,104.108,42.0146,105.043,41.0756,106.042C40.9904,106.132,40.8623,106.167,40.742,106.131L38.0883,105.346C36.3562,104.826,34.5444,105.827,34.0621,107.571C33.5799,109.315,34.6026,111.167,36.3347,111.687C37.3004,111.977,39.7087,112.701,40.658,112.985L40.6582,112.984C41.9108,113.355,43.3657,113.885,44.4237,113.484C44.4238,113.484,44.4238,113.485,44.4239,113.485C45.2444,113.224,45.8201,112.633,46.0664,112.215L46.0658,112.215C46.4302,111.653,46.5916,111.02,46.6051,110.409C46.6087,110.246,46.7356,110.116,46.8968,110.111C47.923,110.078,48.8865,110.348,49.7175,110.706C49.8497,110.763,49.9491,110.928,49.9366,111.072C49.7916,112.742,48.9655,114.36,47.8191,115.405L47.8193,115.407L47.8217,115.408C46.5221,116.558,44.9172,117.235,43.1857,117.208C43.18352,117.20601,43.18143,117.20501,43.17925,117.20304Z"
                      fill="rgb(242,242,242)"
                      id="exzbnYXRMC525"
                      stroke="none"
                      stroke-width="1"
                      transform="translate(-45.246065,-111.063274)"
                    />
                  </g>
                </g>
                <clippath
                  id="exzbnYXRMC526"
                >
                  <rect
                    fill="#fff"
                    height="140"
                    id="exzbnYXRMC527"
                    rx="0"
                    ry="0"
                    stroke="none"
                    stroke-width="1"
                    width="140"
                  />
                </clippath>
              </g>
            </svg>
          </mock-styled.div>
          <h2
            class="el-text-base el-subtitle"
          >
            Pipeline Documentation
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            For more on how to get started with Pipelines and deploying to Reapit infrastructure as a Service (IAAS), visit the doucmentation link below.
          </p>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Please note, this service is a public Alpha and there may be some reliabilty issues while we refine our processes. As such, for now you should only use our infra for internal testing, pre-production applications and non-mission critical services.
          </p>
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            View Docs
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r2:"
      >
        <button
          aria-controls=":r2:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      App Pipeline
    </h1>
    <div
      class="mocked-styled-30 el-grid"
    >
      <div
        class="mocked-styled-34 el-col-split"
      >
        <mock-styled.div
          classname="el-mb10"
        >
          <svg
            class=""
            id="eYmCOrjogMB1"
            shape-rendering="geometricPrecision"
            text-rendering="geometricPrecision"
            viewBox="0 0 141 140"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <g
              id="eYmCOrjogMB2"
            >
              <path
                d="M69,130C98.2711,130,122,106.271,122,77C122,47.7289,98.2711,24,69,24C39.7289,24,16,47.7289,16,77C16,106.271,39.7289,130,69,130Z"
                fill="#506478"
                id="eYmCOrjogMB3"
                stroke="none"
                stroke-width="1"
              />
              <path
                d="M118.382,96.2874L19.2617,58.6543C26.7257,38.4247,46.1787,24,69.0007,24C98.2718,24,122.001,47.7289,122.001,77C122.001,83.8048,120.718,90.3102,118.382,96.2874Z"
                fill="#9faebc"
                id="eYmCOrjogMB4"
                stroke="none"
                stroke-width="1"
              />
              <path
                d="M47.7578,28.4284C54.261,25.5803,61.4458,24,68.9997,24C98.2708,24,122,47.7289,122,77C122,98.7471,108.902,117.435,90.1642,125.605L47.7578,28.4284Z"
                fill="#798da1"
                id="eYmCOrjogMB5"
                stroke="none"
                stroke-width="1"
              />
              <path
                d="M47.7578,28.4284C54.261,25.5803,61.4458,24,68.9997,24C98.2708,24,122,47.7289,122,77C122,83.8162,120.713,90.3318,118.369,96.3172L69.3665,77.946L47.7578,28.4284Z"
                fill="#798da1"
                id="eYmCOrjogMB6"
                stroke="none"
                stroke-width="1"
              />
            </g>
            <g
              id="webhooks-new-svg-element-one"
              transform="translate(69,24) scale(1,1)"
            >
              <g
                id="eYmCOrjogMB7"
                transform="translate(-69,-24)"
              >
                <circle
                  fill="#fff"
                  id="eYmCOrjogMB8"
                  r="24"
                  stroke="none"
                  stroke-width="1"
                  transform="matrix(1 0 0 1 69 24)"
                />
                <path
                  clip-rule="evenodd"
                  d="M60.7574,16.9685C60.7574,12.6704,64.2729,9.15686,68.5734,9.15686C72.8738,9.15686,76.3893,12.6704,76.3893,16.9685C76.3893,21.2666,72.8738,24.7802,68.5734,24.7802C64.2729,24.7802,60.7574,21.2666,60.7574,16.9685ZM81.202,29.5899C81.5092,30.0334,81.7822,30.511,81.987,31.0227C82.0894,31.2273,82.0553,31.4661,81.8847,31.6708C81.6117,32.1484,81.3045,32.5918,80.9632,33.0353C80.4853,33.6834,79.9393,34.2633,79.3932,34.8091C78.9153,35.2866,78.3692,35.7643,77.8231,36.1736C75.1269,38.1862,71.8844,39.2436,68.5396,39.2436C65.1948,39.2436,61.9524,38.1862,59.2561,36.1736C58.71,35.7301,58.1639,35.2866,57.6861,34.8091C57.1059,34.2633,56.5939,33.6835,56.1161,33.0353C55.8089,32.626,55.4676,32.1484,55.1946,31.6708C55.0922,31.4661,55.0581,31.2274,55.1605,31.0227C55.3652,30.5451,55.6383,30.0334,55.9454,29.5899C57.4813,27.2703,59.9387,25.7353,62.6691,25.36C63.0104,25.2918,63.3858,25.3941,63.6589,25.5988C65.0924,26.6563,66.7989,27.2021,68.5737,27.2021C70.3486,27.2021,72.0551,26.6563,73.4886,25.5988C73.7616,25.3941,74.1371,25.326,74.4783,25.36C77.2088,25.7353,79.632,27.2703,81.202,29.5899Z"
                  fill="#7e9bfa"
                  fill-rule="evenodd"
                  id="eYmCOrjogMB9"
                  stroke="none"
                  stroke-width="1"
                />
              </g>
            </g>
            <g
              id="webhooks-new-svg-element-two"
              transform="translate(24,107) scale(1,1)"
            >
              <g
                id="eYmCOrjogMB10"
                transform="translate(-24,-107)"
              >
                <circle
                  fill="#fff"
                  id="eYmCOrjogMB11"
                  r="24"
                  stroke="none"
                  stroke-width="1"
                  transform="matrix(1 0 0 1 24 107)"
                />
                <path
                  clip-rule="evenodd"
                  d="M16.3984,99.5424C16.3984,95.2442,19.9139,91.7307,24.2143,91.7307C28.5148,91.7307,32.0303,95.2442,32.0303,99.5424C32.0303,103.841,28.5148,107.354,24.2143,107.354C19.9139,107.354,16.3984,103.841,16.3984,99.5424ZM36.8392,112.164C37.1464,112.607,37.4194,113.085,37.6242,113.597C37.7266,113.801,37.6925,114.04,37.5219,114.245C37.2489,114.722,36.9417,115.166,36.6004,115.609C36.1225,116.257,35.5764,116.837,35.0304,117.383C34.5525,117.861,34.0064,118.338,33.4603,118.747C30.7641,120.76,27.5216,121.817,24.1768,121.817C20.832,121.817,17.5896,120.76,14.8933,118.747C14.3472,118.304,13.8011,117.861,13.3233,117.383C12.7431,116.837,12.2311,116.257,11.7533,115.609C11.4461,115.2,11.1048,114.722,10.8318,114.245C10.7294,114.04,10.6953,113.801,10.7977,113.597C11.0024,113.119,11.2755,112.607,11.5826,112.164C13.1185,109.844,15.5759,108.309,18.3063,107.934C18.6476,107.866,19.023,107.968,19.2961,108.173C20.7296,109.23,22.4361,109.776,24.2109,109.776C25.9858,109.776,27.6923,109.23,29.1258,108.173C29.3988,107.968,29.7743,107.9,30.1155,107.934C32.846,108.309,35.2692,109.844,36.8392,112.164Z"
                  fill="#7e9bfa"
                  fill-rule="evenodd"
                  id="eYmCOrjogMB12"
                  stroke="none"
                  stroke-width="1"
                />
              </g>
            </g>
            <g
              id="webhooks-new-svg-element-three"
              transform="translate(117,106) scale(1,1)"
            >
              <g
                id="eYmCOrjogMB13"
                transform="translate(-117,-106)"
              >
                <circle
                  fill="#fff"
                  id="eYmCOrjogMB14"
                  r="24"
                  stroke="none"
                  stroke-width="1"
                  transform="matrix(1 0 0 1 117 106)"
                />
                <path
                  clip-rule="evenodd"
                  d="M107.975,98.5499C107.975,94.2518,111.49,90.7383,115.791,90.7383C120.091,90.7383,123.607,94.2518,123.607,98.5499C123.607,102.848,120.091,106.362,115.791,106.362C111.49,106.362,107.975,102.848,107.975,98.5499ZM128.419,111.171C128.727,111.615,129,112.092,129.204,112.604C129.307,112.809,129.273,113.048,129.102,113.252C128.829,113.73,128.522,114.173,128.181,114.617C127.703,115.265,127.157,115.845,126.611,116.391C126.133,116.868,125.587,117.346,125.041,117.755C122.344,119.768,119.102,120.825,115.757,120.825C112.412,120.825,109.17,119.768,106.474,117.755C105.927,117.312,105.381,116.868,104.904,116.391C104.323,115.845,103.811,115.265,103.333,114.617C103.026,114.207,102.685,113.73,102.412,113.252C102.31,113.048,102.275,112.809,102.378,112.604C102.583,112.127,102.856,111.615,103.163,111.171C104.699,108.852,107.156,107.317,109.887,106.941C110.228,106.873,110.603,106.976,110.876,107.18C112.31,108.238,114.016,108.783,115.791,108.783C117.566,108.783,119.272,108.238,120.706,107.18C120.979,106.976,121.354,106.907,121.696,106.941C124.426,107.317,126.849,108.852,128.419,111.171Z"
                  fill="#7e9bfa"
                  fill-rule="evenodd"
                  id="eYmCOrjogMB15"
                  stroke="none"
                  stroke-width="1"
                  transform="matrix(1 0 0 1 1 1)"
                />
              </g>
            </g>
            <g
              id="webhooks-new-svg-element-four"
              transform="translate(69.3825,75.303001) scale(1,1)"
            >
              <path
                clip-rule="evenodd"
                d="M69.0599,82.8133L69.0509,82.8097C68.1124,83.1967,64.7244,83.1896,62.2644,83.1844C61.2546,83.1822,60.4012,83.1804,59.9377,83.2063C55.5647,83.251,51.9503,79.7116,51.9056,75.341C51.9056,70.97,55.4837,67.3572,59.8568,67.3125L66.5311,67.2444C66.5761,67.2439,66.5946,67.3022,66.5572,67.3273C65.2163,68.2248,63.8624,69.77,63.1367,71.1968C63.0708,71.3263,62.9394,71.4089,62.7942,71.411L59.5887,71.4558C57.494,71.4772,55.7977,73.2075,55.8191,75.301C55.8405,77.3945,57.5718,79.0899,59.6664,79.0685C60.1792,79.063,61.0287,79.0546,61.9174,79.0457C63.0521,79.0344,64.2508,79.0224,64.8944,79.0152L64.8944,79.0145C65.0592,79.0121,65.2273,79.0109,65.3974,79.0098C66.7884,79.0005,68.3109,78.9904,69.246,78.2711L69.2463,78.2714C70.0763,77.701,70.528,76.8496,70.6684,76.3033L70.6677,76.3032C70.8934,75.5567,70.8706,74.8017,70.6898,74.121C70.6416,73.9394,70.7414,73.7524,70.9191,73.6913C72.0511,73.3022,73.2099,73.2688,74.2497,73.3788C74.4151,73.3963,74.5786,73.5446,74.6107,73.7077C74.9838,75.6035,74.582,77.6755,73.6403,79.2254L73.6412,79.2277L73.6442,79.2276C72.5658,80.9466,70.9957,82.2465,69.0599,82.8133ZM64.1517,76.9509C63.2099,72.2891,66.8776,67.5559,71.8566,67.4712C71.8619,67.4711,71.8673,67.4709,71.8726,67.4707C71.8765,67.4705,71.8804,67.4704,71.8844,67.4703L78.8274,67.3994C83.2449,67.3543,86.8594,70.9301,86.8594,75.3455C86.8594,79.6721,83.3176,83.2482,78.9889,83.2924L72.2126,83.3616C72.1673,83.3621,72.1491,83.3029,72.1873,83.2783C73.5511,82.4012,74.9453,80.8294,75.6346,79.4153C75.6994,79.2824,75.8324,79.1967,75.9803,79.1946L79.1763,79.15C81.271,79.1286,82.9673,77.3983,82.9459,75.3047C82.9459,73.211,81.232,71.5155,79.1372,71.5369L73.8809,71.5905L73.8837,71.5964C73.6489,71.602,73.4066,71.6034,73.1612,71.6048C71.9192,71.6119,70.5952,71.6195,69.7423,72.1802C68.929,72.6894,68.3867,73.4272,68.1023,74.285C67.883,74.9829,67.8742,75.8422,68.0701,76.5011C68.1215,76.674,68.0221,76.8565,67.8465,76.8982C66.6991,77.1713,65.6413,77.2305,64.4746,77.217C64.3178,77.2152,64.1827,77.1046,64.1517,76.9509Z"
                fill="#fff"
                fill-rule="evenodd"
                id="eYmCOrjogMB16"
                stroke="none"
                stroke-width="1"
                transform="translate(-69.3825,-75.303001)"
              />
            </g>
          </svg>
        </mock-styled.div>
        <h2
          class="el-text-base el-subtitle"
        >
          Pipeline Deployments
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Pipelines are configurations used to deploy applications to our infrastructure. Think of them like a CI / CD runner like Github Actions, Travis or CircleCI
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          A Pipeline can be created via the developer portal or via our CLI NPM package.
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          When you have created a pipeline for your app, you can either deploy it from the command line from a zip file, or by pulling directly from a Github or Bitbucket repo. This will give you a link to your deployed service in the Reapit Platform Cloud.
        </p>
        <button
          class="el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Create Pipeline
        </button>
      </div>
      <div
        class="mocked-styled-34 el-col-split"
      >
        <mock-styled.div
          classname="el-mb10"
        >
          <svg
            class=""
            id="exzbnYXRMC51"
            shape-rendering="geometricPrecision"
            text-rendering="geometricPrecision"
            viewBox="0 0 140 140"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <g
              clip-path="url(#exzbnYXRMC526)"
              id="exzbnYXRMC52"
            >
              <g
                id="exzbnYXRMC53"
              >
                <g
                  id="webhooks-docs-svg-element-one"
                  transform="translate(69.99835,61.58215)"
                >
                  <path
                    d="M119.024,61.4515L69.9983,44.21L20.9727,61.4515L69.9983,78.9543L119.024,61.4515Z"
                    fill="#9faebc"
                    id="exzbnYXRMC54"
                    stroke="none"
                    stroke-width="1"
                    transform="translate(-69.99835,-61.58215)"
                  />
                </g>
                <g
                  id="webhooks-docs-svg-element-two"
                  transform="translate(94.509052,61.58215)"
                >
                  <path
                    d="M119.022,61.4515L69.9961,44.21L69.9961,78.9543L119.022,61.4515Z"
                    fill="#798da1"
                    id="exzbnYXRMC55"
                    stroke="none"
                    stroke-width="1"
                    transform="translate(-94.509052,-61.58215)"
                  />
                </g>
                <g
                  id="exzbnYXRMC56"
                  transform="matrix(1 0 0 1 0.000001 0)"
                >
                  <g
                    id="exzbnYXRMC57"
                    transform="matrix(1 0 0 1 0.000001 0)"
                  >
                    <path
                      d="M88.5528,8.83691L50.3176,8.83691C46.6078,8.83691,43.5898,11.9163,43.5898,15.7005L43.5898,97.8934C43.5898,101.678,46.6078,104.757,50.3176,104.757L88.5528,104.757C92.2626,104.757,95.2814,101.678,95.2814,97.8934L95.2814,15.7005C95.2814,11.9163,92.2626,8.83691,88.5528,8.83691L88.5528,8.83691Z"
                      fill="#607890"
                      id="exzbnYXRMC58"
                      stroke="none"
                      stroke-width="1"
                    />
                    <path
                      d="M88.529,12.8105L82.8467,12.8105C82.3106,12.8105,81.8764,13.2534,81.8764,13.7994C81.8764,15.1111,80.8249,16.1837,79.5399,16.1837L59.2847,16.1837C57.9988,16.1837,56.9473,15.1111,56.9473,13.7994C56.9473,13.2534,56.5132,12.8105,55.977,12.8105L50.2947,12.8105C48.7295,12.8105,47.4609,14.1046,47.4609,15.7003L47.4609,80.5489L91.3628,80.5489L91.3628,15.7003C91.3628,14.1046,90.0942,12.8105,88.529,12.8105Z"
                      fill="#fff"
                      id="exzbnYXRMC59"
                      stroke="none"
                      stroke-width="1"
                    />
                  </g>
                  <g
                    id="exzbnYXRMC510"
                    transform="matrix(1 0 0 1 0 0.000001)"
                  >
                    <path
                      d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,70.5692L50.8828,70.5692L50.8828,45.4146Z"
                      fill="#607890"
                      id="exzbnYXRMC511"
                      stroke="none"
                      stroke-width="1"
                    />
                    <path
                      d="M50.8828,45.4146L69.4588,27.1992L88.0348,45.4146L88.0348,59.7267L50.8828,45.4146Z"
                      fill="#9faebc"
                      id="exzbnYXRMC512"
                      stroke="none"
                      stroke-width="1"
                    />
                    <path
                      d="M88.036,70.5692L77.1623,70.5692L61.7578,34.7519L69.46,27.1992L88.036,45.4146L88.036,70.5692Z"
                      fill="#798da1"
                      id="exzbnYXRMC513"
                      stroke="none"
                      stroke-width="1"
                    />
                    <path
                      d="M88.036,45.4146L88.036,59.7267L69.46,52.6606L61.7578,34.7519L69.46,27.1992L88.036,45.4146Z"
                      fill="#9faebc"
                      id="exzbnYXRMC514"
                      stroke="none"
                      stroke-width="1"
                    />
                  </g>
                </g>
                <g
                  id="webhooks-docs-svg-element-three"
                  transform="translate(69.649327,82.061558)"
                >
                  <g
                    id="exzbnYXRMC515"
                    transform="translate(-69.649326,-79.061558)"
                  >
                    <path
                      d="M70.011522,75.96449C69.821404,76.74574,69.94991,79.38574,70.011522,81.24449L73.915483,77.719668L70.011522,75.96449Z"
                      fill="#607890"
                      id="exzbnYXRMC516"
                      stroke="none"
                      stroke-width="0.28"
                      transform="matrix(1 0 0 1 0.000001 0.000003)"
                    />
                    <path
                      d="M69.992961,76.053166L69.975852,81.339889L73.932592,77.719668L69.992961,76.053166Z"
                      fill="#506478"
                      id="exzbnYXRMC517"
                      stroke="none"
                      stroke-width="0.28"
                      transform="matrix(-1.168966 0 0 -1.168966 151.807857 171.062202)"
                    />
                  </g>
                </g>
                <path
                  d="M69.9983,79.0023L20.9727,61.4512L20.9727,124.568L69.9983,140.345L69.9983,79.0023Z"
                  fill="#506478"
                  id="exzbnYXRMC518"
                  stroke="none"
                  stroke-width="1"
                />
                <path
                  d="M119.022,124.568L119.022,61.4512L69.9961,79.0023L69.9961,140.345L119.022,124.568Z"
                  fill="#607890"
                  id="exzbnYXRMC519"
                  stroke="none"
                  stroke-width="1"
                />
                <g
                  id="webhooks-docs-svg-element-four"
                  transform="translate(36.9986,80.849051)"
                >
                  <path
                    d="M20.9715,61.4521L4,81.8288L53.9483,100.246L69.9972,78.955L20.9715,61.4521Z"
                    fill="#9faebc"
                    id="exzbnYXRMC520"
                    stroke="none"
                    stroke-width="1"
                    transform="translate(-36.9986,-80.849051)"
                  />
                </g>
                <g
                  id="webhooks-docs-svg-element-five"
                  transform="translate(102.997547,80.848101)"
                >
                  <path
                    d="M119.022,61.4512L135.999,81.8278L86.0506,100.245L69.9961,78.954L119.022,61.4512Z"
                    fill="#9faebc"
                    id="exzbnYXRMC521"
                    stroke="none"
                    stroke-width="1"
                    transform="translate(-102.997547,-80.848101)"
                  />
                </g>
                <g
                  id="webhooks-docs-svg-element-six"
                  transform="translate(89.264528,45.746041)"
                >
                  <g
                    id="webhooks-docs-svg-element-seven"
                    transform="rotate(-67.423922)"
                  >
                    <g
                      id="webhooks-docs-svg-element-eight"
                      transform="skewX(-1.018603) skewY(0) scale(1,0.999842)"
                    >
                      <rect
                        fill="rgb(255,229,199)"
                        height="12.724"
                        id="exzbnYXRMC522"
                        rx="3"
                        ry="3"
                        stroke="none"
                        stroke-width="1"
                        transform="translate(-6.34105,-6.362)"
                        width="12.6821"
                      />
                    </g>
                  </g>
                </g>
                <g
                  id="webhooks-docs-svg-element-nine"
                  style="offset-path: path("M37.255498,23.852076L39.921657,34.649638"); offset-rotate: auto;"
                >
                  <g
                    id="webhooks-docs-svg-element-ten"
                    transform="rotate(-25.945515)"
                  >
                    <g
                      id="webhooks-docs-svg-element-eleven"
                      transform="skewX(0.740377) skewY(0) scale(0.999999,0.999917)"
                    >
                      <rect
                        fill="#7e9bfa"
                        height="25.3778"
                        id="exzbnYXRMC523"
                        rx="5"
                        ry="5"
                        stroke="none"
                        stroke-width="1"
                        transform="translate(-12.60465,-12.6889)"
                        width="25.2093"
                      />
                    </g>
                  </g>
                </g>
                <g
                  id="webhooks-docs-svg-element-twelve"
                  style="offset-path: path("M103.180305,18.127591L98.950013,25.52561"); offset-rotate: auto;"
                >
                  <g
                    id="webhooks-docs-svg-element-thirteen"
                    transform="rotate(18.101295)"
                  >
                    <g
                      id="webhooks-docs-svg-element-fourteen"
                      transform="skewX(0.486255) skewY(0) scale(1,0.999964)"
                    >
                      <rect
                        fill="rgb(255,229,199)"
                        height="9.95171"
                        id="exzbnYXRMC524"
                        rx="2"
                        ry="2"
                        stroke="none"
                        stroke-width="1"
                        transform="translate(-4.91747,-4.975855)"
                        width="9.83494"
                      />
                    </g>
                  </g>
                </g>
                <g
                  id="webhooks-docs-svg-element-fifteen"
                  transform="translate(45.246065,111.063275) scale(1,1)"
                >
                  <path
                    d="M49.1786,105.193L54.9201,106.917C58.5733,108.013,60.6997,111.91,59.6454,115.577C58.6123,119.17,54.8382,121.23,51.2585,120.155L45.6548,118.473C45.6173,118.462,45.6165,118.408,45.6538,118.398C46.9878,118.019,48.5126,117.072,49.4186,116.075C49.5037,115.981,49.6339,115.944,49.7564,115.98L52.4022,116.764C54.1343,117.284,55.9461,116.282,56.4284,114.538C56.9283,112.8,55.92,110.952,54.1877,110.432L49.8409,109.127C49.8413,109.129,49.8416,109.131,49.8419,109.133C48.6606,108.796,47.2904,108.259,46.2878,108.554C45.4956,108.768,44.8724,109.242,44.4331,109.881C44.0856,110.404,43.8731,111.116,43.8773,111.713C43.8784,111.87,43.7529,111.996,43.5982,111.985C42.5869,111.917,41.7006,111.695,40.7418,111.384C40.6129,111.343,40.528,111.216,40.5391,111.081C40.8757,106.968,45.03,103.979,49.1555,105.187C49.1632,105.189,49.1708,105.191,49.1786,105.193ZM43.17925,117.20304C41.95735,117.31656,36.90484,115.52796,35.5704,115.193C31.9542,114.107,29.8191,110.24,30.8259,106.6C31.8695,102.97,35.6823,100.889,39.2988,101.974L44.8181,103.631C44.8553,103.642,44.8567,103.695,44.8199,103.706C43.4999,104.108,42.0146,105.043,41.0756,106.042C40.9904,106.132,40.8623,106.167,40.742,106.131L38.0883,105.346C36.3562,104.826,34.5444,105.827,34.0621,107.571C33.5799,109.315,34.6026,111.167,36.3347,111.687C37.3004,111.977,39.7087,112.701,40.658,112.985L40.6582,112.984C41.9108,113.355,43.3657,113.885,44.4237,113.484C44.4238,113.484,44.4238,113.485,44.4239,113.485C45.2444,113.224,45.8201,112.633,46.0664,112.215L46.0658,112.215C46.4302,111.653,46.5916,111.02,46.6051,110.409C46.6087,110.246,46.7356,110.116,46.8968,110.111C47.923,110.078,48.8865,110.348,49.7175,110.706C49.8497,110.763,49.9491,110.928,49.9366,111.072C49.7916,112.742,48.9655,114.36,47.8191,115.405L47.8193,115.407L47.8217,115.408C46.5221,116.558,44.9172,117.235,43.1857,117.208C43.18352,117.20601,43.18143,117.20501,43.17925,117.20304Z"
                    fill="rgb(242,242,242)"
                    id="exzbnYXRMC525"
                    stroke="none"
                    stroke-width="1"
                    transform="translate(-45.246065,-111.063274)"
                  />
                </g>
              </g>
              <clippath
                id="exzbnYXRMC526"
              >
                <rect
                  fill="#fff"
                  height="140"
                  id="exzbnYXRMC527"
                  rx="0"
                  ry="0"
                  stroke="none"
                  stroke-width="1"
                  width="140"
                />
              </clippath>
            </g>
          </svg>
        </mock-styled.div>
        <h2
          class="el-text-base el-subtitle"
        >
          Pipeline Documentation
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          For more on how to get started with Pipelines and deploying to Reapit infrastructure as a Service (IAAS), visit the doucmentation link below.
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Please note, this service is a public Alpha and there may be some reliabilty issues while we refine our processes. As such, for now you should only use our infra for internal testing, pre-production applications and non-mission critical services.
        </p>
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          View Docs
        </button>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r2:"
    >
      <button
        aria-controls=":r2:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelinePage should match snapshot where no pipeline or app 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        App Pipeline
      </h1>
      <div
        class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          No record of this app found, please select an app from the My Apps page.
        </div>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r3:"
      >
        <button
          aria-controls=":r3:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      App Pipeline
    </h1>
    <div
      class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      role="status"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon-new el-icon"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            style="font-size: 1.25rem;"
            title="Icon image with name info"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        aria-live="polite"
        class="el-pn-content"
      >
        No record of this app found, please select an app from the My Apps page.
      </div>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r3:"
    >
      <button
        aria-controls=":r3:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
